# real-time-risk-engine

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/real_time_risk_engine/: __init__.py  risk.py
tests/: test_core.py
